--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/feeds.css" />
-    <script type="module" src="/src/func/run.js"></script>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="feeds.css" />
+    <script type="module" src="src/func/run.js"></script>
     <!-- <script src="/cat/classes/main.js"></script> -->
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="index.js"></script>
 
   </head>
   <body></body>
