--- a/aboutMe/index.html
+++ b/aboutMe/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./index.css" />
-    <script type="module" src="./src/func/run.js"></script>
+    <link rel="stylesheet" href="../index.css" />
+    <script type="module" src="../src/func/run.js"></script>
     <script type="module" src="index.js"></script>
 
   </head>
